Updated API method.
